--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 }
 .header-nav {
  /*marges menu*/
-    margin: 20px 0; 
+    margin: 40px 0; 
     margin-right: 30px;  
 }
 .header-nav a{
@@ -40,6 +40,7 @@ body {
    
 }
  a{
+     /*propriètes de "a"*/
     text-decoration: none;
     color: black;
    
@@ -48,7 +49,7 @@ a:hover{
     /*effet de survol sur le menu*/
     border-top: 2px solid #0065FC;
     color: #0065FC ;
-    padding-top: 20px;
+    padding-top: 30px;
 }
 .disabled {
     /*propriètés de "s'incrire"-désactivation du lien*/
@@ -72,8 +73,12 @@ a:hover{
    margin-right: auto;
    margin-bottom: 10px;
     display: flex;
+    text-align: center;
+    padding: 6px;
   
+    font-family: "Raleway";
 }
+
 .searchbar{
     height: 35px;
     border:solid 1px #F2F2F2;
@@ -92,53 +97,33 @@ caption{
     font-weight: bold;
     display: flex;
     align-items: center;
+    font-size: 0.8em;
 }
-#map-marker{
+
+.fa-map-marker-alt{
+    /*propriètés de l'icone localisation*/
     display: flex;
     justify-content: center;
     align-items: center;
     padding-left: 4px;
-   
-}
-.iconsearch{
-    
-    background: #F2F2F2;
+    border-radius: 1rem 0rem 0rem 1rem;   
+     background: #F2F2F2;
     width: 35px;
     height: 35px;
     border:solid 0 #F2F2F2;
--moz-border-radius-topleft: 50px;
--moz-border-radius-topright:0px;
--moz-border-radius-bottomleft:50px;
--moz-border-radius-bottomright:0px;
--webkit-border-top-left-radius:50px;
--webkit-border-top-right-radius:0px;
--webkit-border-bottom-left-radius:50px;
--webkit-border-bottom-right-radius:0px;
-border-top-left-radius:50px;
-border-top-right-radius:0px;
-border-bottom-left-radius:50px;
-border-bottom-right-radius:0px;
 }
+
 .button{
+    /*propriètés du bouton Rechercher*/
     color: white;
     font-family: "Raleway";
     background-color: #0065FC;
     border:solid 2px #0065FC;
     font-weight: bold;
-    border:solid 2px #0065FC;
-    width: 100px;
--moz-border-radius-topleft: 0px;
--moz-border-radius-topright:30px;
--moz-border-radius-bottomleft:0px;
--moz-border-radius-bottomright:30px;
--webkit-border-top-left-radius:0px;
--webkit-border-top-right-radius:30px;
--webkit-border-bottom-left-radius:0px;
--webkit-border-bottom-right-radius:30px;
-border-top-left-radius:0px;
-border-top-right-radius:30px;
-border-bottom-left-radius:0px;
-border-bottom-right-radius:30px;
+    padding: 2px;
+    border-radius: 0rem 1rem 1rem 0rem;
+    padding: 0rem 1rem 0rem 1rem;
+    
 }
 .ecart{
     border-spacing: 10px;
@@ -152,7 +137,6 @@ border-bottom-right-radius:30px;
     border:solid 2px #DEEBFF;
     color: #0065FC;
     background: #DEEBFF;
-    
 -moz-border-radius-topleft: 50px;
 -moz-border-radius-topright:50px;
 -moz-border-radius-bottomleft:50px;
@@ -169,6 +153,7 @@ border-bottom-right-radius:50px;
 .border-filter{
     padding: 0;
     border:solid 2px #F2F2F2;
+    font-weight: bold;
 -moz-border-radius-topleft: 50px;
 -moz-border-radius-topright:50px;
 -moz-border-radius-bottomleft:50px;
