--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ caption{
     width: 100px;
 }
 
-td:hover{
+.border-filter:hover{
     /*effet de survol sur les filtres*/
     background-color: #DEEBFF;
 }
@@ -220,7 +220,9 @@ h2{
     /*propriètés de h2*/
     display: block;
    font-size: 16px;
-   margin: 20px;
+   margin-right: 160px;
+   margin-top: 20px;
+   margin-bottom: 20px;
     
 }
 h3{
@@ -232,7 +234,7 @@ h3{
     background-color: #F2F2F2;
     width:70%;
     max-height: auto;
-    border-radius: 1em 1em 1em 1em;
+    border-radius: 2em 2em 2em 2em;
     margin: 0 20px 0 0;
     padding: 0 20px;
 
@@ -243,7 +245,7 @@ h3{
 img{
     /*propriètés images*/
 
-    border-radius: 1em 1em 0em 0em;
+    border-radius: 2em 2em 0em 0em;
     padding: 5px;
    width: 270px;
    height: 180px;   
@@ -278,12 +280,12 @@ article{
 
 .location{
     background-color: white;
-    border-radius: 1em 1em 1em 1em;
+    border-radius: 2em 2em 2em 2em;
     display: flex;
     flex-direction: column;
     width: 280px;
     height: 274px;
-    padding-top: 5px;
+    padding: 1px;
 }   
 .text{
     align-items: center;
@@ -297,16 +299,17 @@ article{
     display: flex;
     width:30%;
     border-radius: 1em 1em 1em 1em;
-    justify-content: space-between;
     flex-direction: column;
     margin: 0 20px;
     height: auto;
+    padding: 0px 20px;
 }
 .entete{
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding: 10px
+    margin-bottom:20px; 
 }
 .fa-chart-line{
 padding-right: 10px;
@@ -315,9 +318,20 @@ padding-right: 10px;
     background-color: white;
     border-radius: 1em 1em 1em 1em;
     display: flex;
-    flex-direction: column;
-    width: 280px;
-    height: 274px;
+    justify-content: flex-start;
+    width: 100%;
+    height: 190px;
     padding-top: 5px;
+    margin-bottom: 40px;
+    
 }
-
+.img-pop{
+    width: 190px;
+    height: 190px;
+    border-radius: 2em 0em 0em 2em;
+    object-fit: cover;
+}
+.text-pop{
+   margin-left: 20px; 
+   
+}
