--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ body{
     align-items: center;
     width: 97px;
     height: 90px;
+    object-fit: contain;
+    margin-left: 0px;
     
 }
 .navbar{
@@ -130,20 +132,6 @@ input{
 }
 /*******************************propriètés des filtres*******************************/
 
-table{
-    display: flex;
-    width: 100%;
-    table-layout: fixed;
-}
-caption{
-    color: black;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    width: 100px;
-}
-
 .border-filter:hover{
     /*effet de survol sur les filtres*/
     background-color: #DEEBFF;
@@ -178,8 +166,8 @@ border-bottom-right-radius:50px;
 
 .border-filter{
     align-items: center;
-    margin-right: 20px;
-    padding: 0px 10px 0px 0px;
+    margin-right: 70px;
+    padding: 0px 20px 0px 0px;
     border:solid 2px #F2F2F2;
     font-weight: bold;
 border-top-left-radius:50px;
@@ -215,32 +203,30 @@ section{
     /*alignement d'hebergement et de populaire*/
  display: flex;
 
+
 }
 h2{
     /*propriètés de h2*/
     display: block;
    font-size: 16px;
-   margin-right: 160px;
+   margin-right: 190px;
    margin-top: 20px;
    margin-bottom: 20px;
     
 }
 h3{
     /*propriètés de h3*/ 
-    font-size: 12px;
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 10px;
 }
 .hebergements{
     /*propriètés de la section hebergements*/
     background-color: #F2F2F2;
     width:70%;
-    max-height: auto;
     border-radius: 2em 2em 2em 2em;
     margin: 0 20px 0 0;
-    padding: 0 20px;
-
-    
-    
-    
+    padding: 0 20px;    
 }
 img{
     /*propriètés images*/
@@ -249,12 +235,11 @@ img{
     padding: 5px;
    width: 270px;
    height: 180px;   
-   margin-left: 5px;
-   
+   margin-left: 5px; 
+   object-fit: cover;
 }
 article{
-    font-size: 12px;
-
+    font-size: 10px;
 }
 
 .blue{
@@ -279,26 +264,34 @@ article{
 }
 
 .location{
+    /*proprietes ducadre blanc*/
     background-color: white;
     border-radius: 2em 2em 2em 2em;
     display: flex;
     flex-direction: column;
     width: 280px;
     height: 274px;
-    padding: 1px;
+    padding: 1px 1px 3px 1px;
 }   
 .text{
+    /*alignement legende des hotels*/
     align-items: center;
     padding-left: 15px;
-  
-
 }
+/*proprietes afficher plus*/
+.plus{
+    display: block;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 40px 0px 0px 20px ;
+}
+/******************************* propriètés de la partie populaire *******************************/
 .populaires{
      /*Propriètés populaires */
     background-color: #F2F2F2;
     display: flex;
     width:30%;
-    border-radius: 1em 1em 1em 1em;
+    border-radius: 2em 2em 2em 2em;
     flex-direction: column;
     margin: 0 20px;
     height: auto;
@@ -308,30 +301,40 @@ article{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding: 10px
-    margin-bottom:20px; 
 }
 .fa-chart-line{
+    /*proprietes de l'icone graph*/
 padding-right: 10px;
 }
 .location-pop{
+    /*proprietes de la partie populaire*/
     background-color: white;
-    border-radius: 1em 1em 1em 1em;
+    border-radius: 2em 2em 2em 2em;
     display: flex;
     justify-content: flex-start;
     width: 100%;
-    height: 190px;
+    height: 170px;
     padding-top: 5px;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
     
 }
 .img-pop{
+    /*proprietes des images de la partie pop*/
     width: 190px;
-    height: 190px;
+    height: 160px;
     border-radius: 2em 0em 0em 2em;
     object-fit: cover;
 }
 .text-pop{
+    /*alignement de la legende pop*/
    margin-left: 20px; 
    
+}
+.text-pop h3{
+    /*proprietes de la legende pop*/
+    font-size: 16px;
+    font-weight: bold;
+}
+.notation-pop{
+margin-top: 50px;
 }
