--- a/style.css
+++ b/style.css
@@ -79,7 +79,6 @@
         /*propriètes du titre*/
         margin: 20px 0;
         font-size: 20px;
-        font-style: bold;
     }
     .subtitle{
         /*propriètes du sous-titre*/
@@ -203,17 +202,17 @@
     
     section{
         /*alignement d'hebergement et de populaire*/
-     display: flex;
      margin: 20px;
-    
-    
+     width: auto;
+
+    }
+    .bloc1{
+        display: flex;
+        justify-content: space-between;
     }
     h2{
         /*propriètés de h2*/
-       margin: 20px;
-       width: 90%%;
-       display: flex;
-        
+       margin: 20px 0 0 20px;
     }
     h3{
         /*propriètés de h3*/ 
@@ -224,10 +223,8 @@
     .hebergements{
         /*propriètés de la section hebergements*/
         background-color: #F2F2F2;
-        width:70%;
+        width: auto;
         border-radius: 2em 2em 2em 2em;
-        display: flex;
-        flex-direction: column;
     }
     .hebergements h2{
         font-size: 20px;
@@ -253,27 +250,25 @@
         /*etoiles notation grise*/
         color: #DEEBFF;
     }
-    .ligne1{
+    .ligne1{ 
         /* propriètes de la ligne 1*/
         display: flex;
         justify-content: space-between;
         margin: 20px;
     }
     .ligne2{
-        /* propriètes de la ligne 2*/
+         /*propriètes de la ligne 2*/
         display: flex;
         justify-content: space-between;
-        margin: 20px;  
+        margin: 20px; 
+        
     }
     
     .location{
         /*proprietes ducadre blanc*/
         background-color: white;
         border-radius: 2em 2em 2em 2em;
-        display: flex;
-        flex-direction: column;
         width: 30%;
-       
     }   
     .text{
         /*alignement legende des hotels*/
@@ -283,7 +278,6 @@
     }
     /*proprietes afficher plus*/
     .plus{
-        display: block;
         font-size: 16px;
         font-weight: bold;
         margin: 20px;
@@ -293,7 +287,6 @@
          /*Propriètés populaires */
         background-color: #F2F2F2;
         display: flex;
-        width:30%;
         border-radius: 2em 2em 2em 2em;
         flex-direction: column;
         margin: 0 20px;
@@ -305,7 +298,7 @@
     }
     .entete{
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
         align-items: center;
     }
     .fa-chart-line{
@@ -319,15 +312,14 @@
         display: flex;
         justify-content: flex-start;
         width: 100%;
-        height: 170px;
         padding-top: 5px;
         margin-bottom: 50px;
         
     }
     .img-pop{
         /*proprietes des images de la partie pop*/
-        width: 190px;
-        height: 160px;
+        width: 30%;
+        height:100%;
         border-radius: 2em 0em 0em 2em;
         object-fit: cover;
     }
@@ -343,5 +335,6 @@
     }
     .notation-pop{
     margin-top: 50px;
+    
     }
     
